fixing alignment

--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,7 @@ body {
 .container {
   padding: 10px;
   margin: 0 auto;
-display: flex;
-justify-content: center;
+  justify-content: center;
 }
 
 img {
